--- a/packages/frontend/style.css
+++ b/packages/frontend/style.css
@@ -18,7 +18,8 @@ h2 {
   border-radius: 10px;
 }
 
-.members {
+.members,
+.password {
   display: flex;
   justify-content: space-between;
   padding: 0;
@@ -38,11 +39,21 @@ input {
   border-radius: 5px;
   border: none;
   text-align: center;
-  padding-top: 10px;
+  padding: 5px;
+  outline: none;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#decrypt-input {
+  width: 90%;
+  text-align: left;
 }
 
 #permission-btn,
-#connect-btn {
+#connect-btn,
+#decrypt-btn {
   background: #10b981;
   height: 30px;
   width: 150px;
@@ -54,16 +65,49 @@ input {
   display: block;
 }
 
-#permission-btn {
+#permission-btn,
+#decrypt-btn {
   margin: 20px auto;
 }
 
 #permission-btn:hover,
-#connect-btn:hover {
+#connect-btn:hover,
+#decrypt-btn:hover {
   cursor: pointer;
 }
 
 h1 {
   color: #55f991;
   background: none;
+}
+
+.hide {
+  display: none;
+}
+
+.display {
+  display: block;
+}
+
+#permission-page-btn,
+#decrypting-page-btn {
+  background: none;
+  border: none;
+  padding: 0 20px;
+  font-size: 24px;
+  color: #10b981;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+#decrypted-password {
+  background: #273549;
+  height: 30px;
+  width: 60%;
+  color: #fff;
+  margin: 0 auto;
+  margin-top: 30px;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px;
 }
